[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "kanjivg"
dynamic = ["version"]
authors = [
    {name = "ospalh"},
    {name = "benkasminbullock"},
    {name = "Gnurou"},
    {name = "eichhirn"}
]
description = "Kanji vector graphics "
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Utilities"
]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
tag_regex = "^(?:r)?(\\d{8}-?\\d?)$"

[project.urls]
Homepage = "https://github.com/KanjiVG/kanjivg"
